# velocyto.py

./: .gitignore  .sourcery.yaml  .travis.yml  CHANGELOG.md  README.md  Untitled-1.ipynb  build.py  mypy.ini  noxfile.py  pyproject.toml  ruff.toml  setup.cfg  test.py
doc/: conf.py
docs/: conf.py
docs/_ext/: edit_on_github.py
src/velocount/: __init__.py  constants.py  counter.py  feature.py  indexes.py  logic.py  molitem.py  segment_match.py  transcript_model.py
src/velocount/commands/: __init__.py  _run.py  cli.py  common.py  dropest_bc_correct.py  run.py  run10x.py  run_dropest.py  run_smartseq2.py
src/velocyto/: __init__.py  analysis.py  constants.py  counter.py  diffusion.py  estimation.py  feature.py  gene_info.py  indexes.py  logging.py  logic.py  metadata.py  molitem.py  neighbors.py  r_interface.py  read.py  segment_match.py  serialization.py  speedboosted.c  speedboosted.pyx  transcript_model.py  utils.py
src/velocyto/commands/: __init__.py  _run.py  common.py  dropest_bc_correct.py  run.py  run10x.py  run_dropest.py  run_smartseq2.py
