[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "velocyto"
version = "0.43.0"
authors = [
    {name = "Linnarsson Lab", email = "sten.linnarsson@ki.se"},
]
description = "RNA velocity analysis for single cell RNA-seq data"
readme = "README.md"
keywords = [
    "RNAseq",
    "singlecell",
    "bioinformatics",
    "transcriptomics",
]
license = {text = "BSD-2-Clause"}
requires-python = "<3.11,>=3.10"
dependencies = [
    "numba>=0.60.0",
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    "cython>=3.0.10",
    "matplotlib>=3.9.1",
    "h5py>=3.11.0",
    "loompy>=3.0.7",
    "pysam>=0.22.1",
    "pandas>=2.2.2",
    "scikit-learn>=1.5.1",
    "rpy2>=3.5.16",
    "typer>=0.12.3",
    "loguru>=0.7.2",
    "rich>=13.7.1",
    "tqdm>=4.66.4",
    "anndata>=0.10.8",
]

[project.optional-dependencies]
R = [
    "rpy2>=3.5.16",
]

[project.urls]
homepage = "https://github.com/velocyto-team/velocyto.py"
repository = "https://github.com/velocyto-team/velocyto.py"
documentation = "http://velocyto.org/velocyto.py/index.html"

[project.scripts]
velocyto = "velocyto.commands.cli:velocyto"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "memray>=1.13.3",
    "memory-profiler>=0.61.0",
    "nox>=2024.4.15",
    "ruff>=0.5.1",
    "mypy>=1.10.1",
    "pytest>=8.2.2",
]

[tool.pdm.build]
includes = ["src/velocyto/*.so", "src/velocyto/*.csv", "src/velocyto/*.pyx", "src/velocyto/*.c"]
